[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "discord-py>=2.5.2",
    "flask>=3.1.0",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
]



[tool.poetry.dependencies]
python = "^3.11"
discord.py = "^2.3.2"
python-dotenv = "^0.19.2"
pytz = "^2022.7"
